added project loom